Added forum post

--- a/GoodGuysCommunity/GoodGuysCommunity.Web/Areas/Forum/Views/Posts/Index.cshtml
+++ b/GoodGuysCommunity/GoodGuysCommunity.Web/Areas/Forum/Views/Posts/Index.cshtml
@@ -1,6 +1,8 @@
 ﻿@using GoodGuysCommunity.Web.Areas.Forum.Models;
 @model IEnumerable<PostListViewModel>
 
+<a href="/forum/posts/createpost">Make a post!!!</a>
+
 <ul>
 <li></li>
 </ul>
