Added db classes for resource methods and a db seed method

--- a/GoodGuysCommunity/GoodGuysCommunity.Web/Views/Manage/_ManageNav.cshtml
+++ b/GoodGuysCommunity/GoodGuysCommunity.Web/Views/Manage/_ManageNav.cshtml
@@ -1,4 +1,4 @@
-﻿@using GoodGuysCommunity.Data
+﻿@using GoodGuysCommunity.Data.Models
 @using Microsoft.AspNetCore.Identity
 @inject SignInManager<User> SignInManager
 @{
