--- a/GoodGuysCommunity/GoodGuysCommunity.Web/Views/Shared/_LoginPartial.cshtml
+++ b/GoodGuysCommunity/GoodGuysCommunity.Web/Views/Shared/_LoginPartial.cshtml
@@ -1,4 +1,4 @@
-@using GoodGuysCommunity.Data
+@using GoodGuysCommunity.Data.Models
 
 @inject SignInManager<User> SignInManager
 @inject UserManager<User> UserManager
