--- a/GoodGuysCommunity/GoodGuysCommunity.Web/Views/Account/Login.cshtml
+++ b/GoodGuysCommunity/GoodGuysCommunity.Web/Views/Account/Login.cshtml
@@ -1,5 +1,5 @@
 ﻿@using System.Linq
-@using GoodGuysCommunity.Data
+@using GoodGuysCommunity.Data.Models
 @model LoginViewModel
 @inject SignInManager<User> SignInManager
 
