Оправен е линка към stream image

--- a/GoodGuysCommunity/GoodGuysCommunity.Web/Views/Home/Index.cshtml
+++ b/GoodGuysCommunity/GoodGuysCommunity.Web/Views/Home/Index.cshtml
@@ -15,7 +15,7 @@
         </nav>
     </div>
     <div id="sidebar">
-        <img src="buttonbeta.png" id="streamimage">
+        <img src="~/images/buttonbeta.png" id="streamimage">
         <div id="forumNewest">
             <div class="forumcontent"><p class="threadtitle">C# блабла</p></div>
             <div class="forumcontent"><p class="threadtitle">HTML и CSS не правят контакт</p></div>
