--- a/GoodGuysCommunity/GoodGuysCommunity.Web/wwwroot/css/style.css
+++ b/GoodGuysCommunity/GoodGuysCommunity.Web/wwwroot/css/style.css
@@ -24,6 +24,7 @@
       width: 400px;
       height: 600px;
       margin-right: 10px;
+      margin-top: 15px;
     }
     #streamimage {
       width: 100%;
