--- a/GoodGuysCommunity/GoodGuysCommunity.Web/Views/Shared/_LoginPartial.cshtml
+++ b/GoodGuysCommunity/GoodGuysCommunity.Web/Views/Shared/_LoginPartial.cshtml
@@ -7,6 +7,8 @@
 {
     <form asp-area="" asp-controller="Account" asp-action="Logout" method="post" id="logoutForm" class="navbar-right">
         <ul class="nav navbar-nav navbar-right">
+            <li><a asp-area="Forum" asp-controller="Posts" asp-action="Index">Forum</a></li>
+            <li><a asp-area="Resources" asp-controller="Browse" asp-action="Index">Resources</a></li>
             <li>
                 <a asp-area="" asp-controller="Manage" asp-action="Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
             </li>
