--- a/GoodGuysCommunity/GoodGuysCommunity.Web/Views/Home/Index.cshtml
+++ b/GoodGuysCommunity/GoodGuysCommunity.Web/Views/Home/Index.cshtml
@@ -4,16 +4,16 @@
 
 
    
-    <h1 id="logo">Good Guys Community</h1>
-    <div id="navbarback">
-        <nav id="navbardiv">
+    
+    <!--<div id="navbarback">
+         <nav id="navbardiv">
             <span><a href="http://google.com"><p class="navb">Начало</p></a></span>
             <span><a href="http://google.com"><p class="navb">Ресурси</p></a></span>
             <span><a href="http://google.com"><p class="navb">Форум</p></a></span>
             <span><a href="http://google.com"><p class="navb">Регистрация</p></a></span>
             <span><a href="http://google.com"><p class="navb">Login</p></a></span>
-        </nav>
-    </div>
+        </nav> 
+    </div>-->
     <div id="sidebar">
         <img src="~/images/buttonbeta.png" id="streamimage">
         <div id="forumNewest">
