--- a/GoodGuysCommunity/GoodGuysCommunity.Web/Views/Shared/_Layout.cshtml
+++ b/GoodGuysCommunity/GoodGuysCommunity.Web/Views/Shared/_Layout.cshtml
@@ -23,39 +23,32 @@
     </environment>
 </head>
 <body>
-<<<<<<< HEAD
-    
-=======
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
+    <nav id="navbarback">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span> 
                 </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">GoodGuysCommunity.Web</a>
             </div>
+        <div id="everything">
             <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                    @if (this.User.Identity.IsAuthenticated)
-                    {
-                    <li><a asp-area="Forum" asp-controller="Posts" asp-action="Index">Forum</a></li>
-                    }
-                </ul>
+                <img src="~/images/logo.png" id="logo">
+                <span><a asp-area="" asp-controller="Home" asp-action="Index"><p class="navb" id= "homebutton">Home</p></a></span>
+                @if (this.User.Identity.IsAuthenticated)
+                {
+                    <span><a asp-area="Forum" asp-controller="Posts" asp-action="Index"><p class="navb" >Forum</p></a></span>
+                }
+
                 @await Html.PartialAsync("_LoginPartial")
             </div>
         </div>
+
     </nav>
->>>>>>> 8219c72de375a2d332ded09e89f101cad27e4114
     <div class="container body-content">
         @RenderBody()
         <hr />
-        <footer>
-            <p>&copy; 2018 - GoodGuysCommunity.Web</p>
-        </footer>
     </div>
 
     <environment include="Development">
