--- a/GoodGuysCommunity/GoodGuysCommunity.Web/Views/Shared/_LoginPartial.cshtml
+++ b/GoodGuysCommunity/GoodGuysCommunity.Web/Views/Shared/_LoginPartial.cshtml
@@ -18,8 +18,7 @@
 }
 else
 {
-    <ul class="nav navbar-nav navbar-right">
-        <li><a asp-area="" asp-controller="Account" asp-action="Register">Register</a></li>
-        <li><a asp-area="" asp-controller="Account" asp-action="Login">Log in</a></li>
-    </ul>
+
+        <span><a asp-area="" asp-controller="Account" asp-action="Register"><p class = "navb">Register</p></a></span>
+        <span><a asp-area="" asp-controller="Account" asp-action="Login"><p class="navb">Login</p></a></span>
 }
