--- a/GoodGuysCommunity/GoodGuysCommunity.Web/wwwroot/css/style.css
+++ b/GoodGuysCommunity/GoodGuysCommunity.Web/wwwroot/css/style.css
@@ -1,7 +1,7 @@
 #logo {
     font-family: 'Fredoka One', cursive;
     text-align: center;
-    font-size: 45px;
+    font-size: 55px;
     margin-bottom: 10px;
     color: rgb(101,175,214);
 }
@@ -14,11 +14,27 @@
     margin-left: 30px;
     margin-right: 30px;
     }
-    #navbarback {
-      background-color: rgb(100,104,214);
-      width = screen.width;
-      height: 50px;
-    }
+#homebutton {
+    float: left;
+}
+.navbar-header {
+    text-align: center;
+}
+.container {
+    font-family: 'Oswald', sans-serif;
+    text-align: center;
+    font-size: 30px;
+    color: black;
+    display: inline;
+    margin-left: 30px;
+    margin-right: 30px;
+}
+
+#navbarback {
+    background-color: rgb(100,104,214);
+    width = screen.width;
+    height: 50px;
+}
     #sidebar {
       float: right;
       width: 400px;
@@ -31,6 +47,9 @@
       height: auto;
       max-width: 100%;;
     }
+#logo {
+    height:50px;
+}
     .forumcontent {
       padding: 10px;
     }
@@ -54,3 +73,10 @@
   #navbardiv{
     text-align: center;
     }
+
+  #everything{
+      text-align: center;
+  }
+.navbar-nav > li > a {
+    color: white !important;
+}
