--- a/GoodGuysCommunity/GoodGuysCommunity.Web/Views/Shared/_LoginPartial.cshtml
+++ b/GoodGuysCommunity/GoodGuysCommunity.Web/Views/Shared/_LoginPartial.cshtml
@@ -21,6 +21,6 @@
 else
 {
 
-        <span><a asp-area="" asp-controller="Account" asp-action="Register"><p class = "navb">Register</p></a></span>
-        <span><a asp-area="" asp-controller="Account" asp-action="Login"><p class="navb">Login</p></a></span>
+        <a asp-area="" asp-controller="Account" asp-action="Register">Register</a>
+        <a asp-area="" asp-controller="Account" asp-action="Login">Login</a>
 }
