--- a/GoodGuysCommunity/GoodGuysCommunity.Web/Areas/Forum/Views/Posts/Index.cshtml
+++ b/GoodGuysCommunity/GoodGuysCommunity.Web/Areas/Forum/Views/Posts/Index.cshtml
@@ -6,6 +6,6 @@
 <ul>
     @foreach (var post in Model)
     {
-        <li>@post.Name</li>
+        <li>@post.Name <a href="/forum/posts/details">Details</a></li>
     }
 </ul>
