--- a/GoodGuysCommunity/GoodGuysCommunity.Web/Views/Shared/_LoginPartial.cshtml
+++ b/GoodGuysCommunity/GoodGuysCommunity.Web/Views/Shared/_LoginPartial.cshtml
@@ -5,18 +5,19 @@
 
 @if (SignInManager.IsSignedIn(User))
 {
-    <form asp-area="" asp-controller="Account" asp-action="Logout" method="post" id="logoutForm" class="navbar-right">
-        <ul class="nav navbar-nav navbar-right">
+
+        <ul class="navbar-nav">
             <li><a asp-area="Forum" asp-controller="Posts" asp-action="Index">Forum</a></li>
             <li><a asp-area="Resources" asp-controller="Browse" asp-action="Index">Resources</a></li>
             <li>
                 <a asp-area="" asp-controller="Manage" asp-action="Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
             </li>
             <li>
-                <button type="submit" class="btn btn-link navbar-btn navbar-link">Log out</button>
+                <form asp-area="" asp-controller="Account" asp-action="Logout" method="post" id="logoutForm" class="navbar-right">
+                    <button type="submit" class="btn btn-link navbar-btn navbar-link">Log out</button>
+                </form>
             </li>
         </ul>
-    </form>
 }
 else
 {
