--- a/GoodGuysCommunity/GoodGuysCommunity.Web/wwwroot/css/style.css
+++ b/GoodGuysCommunity/GoodGuysCommunity.Web/wwwroot/css/style.css
@@ -21,7 +21,7 @@
 
 #navbarback {
     background-color: rgb(100,104,214);
-    width = screen.width;
+    width: 100vw;
     height: 50px;}
     #sidebar {
       float: right;
@@ -62,13 +62,25 @@
     text-align: center;
     }
 
+.navbar-nav {
+    display: flex;
+    height: 100%;
+    align-content: center;
+    align-items: center;
+    float: none !important;
+}
 
 .navbar-collapse.collapse a {
-    font-family: 'Oswald', sans-serif;
     text-align: center;
-    font-size: 30px;
     color: white;
     display: inline;
+    font-size: 15px;
     margin-left: 30px;
     margin-right: 30px;
+}
+
+.navbar-collapse.collapse {
+    display: flex !important;
+    flex-direction: row;
+    align-items: center;
 }
