--- a/GoodGuysCommunity/GoodGuysCommunity.Web/Areas/Forum/Views/Posts/Details.cshtml
+++ b/GoodGuysCommunity/GoodGuysCommunity.Web/Areas/Forum/Views/Posts/Details.cshtml
@@ -1,1 +1,8 @@
-﻿
+﻿@using GoodGuysCommunity.Web.Areas.Forum.Models;
+@model PostListViewModel
+
+<h1>@Model.Name</h1>
+<br />
+<h2>@Model.Content</h2>
+<br />
+<a href="/forum/comments/index">Add a comment</a>
