--- a/GoodGuysCommunity/GoodGuysCommunity.Web/Views/Account/Login.cshtml
+++ b/GoodGuysCommunity/GoodGuysCommunity.Web/Views/Account/Login.cshtml
@@ -8,7 +8,7 @@
 }
 
 <h2>@ViewData["Title"]</h2>
-<div class="row">
+<div class="log-in-page">
     <div class="col-md-4">
         <section>
             <form asp-route-returnurl="@ViewData["ReturnUrl"]" method="post">
@@ -47,7 +47,7 @@
             </form>
         </section>
     </div>
-    <div class="col-md-6 col-md-offset-2">
+    <div class="col-md-6">
         <section>
             <h4>Use another service to log in.</h4>
             <hr />
