--- a/GoodGuysCommunity/GoodGuysCommunity.Web/wwwroot/css/style.css
+++ b/GoodGuysCommunity/GoodGuysCommunity.Web/wwwroot/css/style.css
@@ -82,3 +82,9 @@
     flex-direction: row;
     align-items: center;
 }
+
+.log-in-page {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
