--- a/GoodGuysCommunity/GoodGuysCommunity.Web/Areas/Forum/Views/Posts/Details.cshtml
+++ b/GoodGuysCommunity/GoodGuysCommunity.Web/Areas/Forum/Views/Posts/Details.cshtml
@@ -1,8 +1,11 @@
 ﻿@using GoodGuysCommunity.Web.Areas.Forum.Models;
-@model PostListViewModel
+@model PostDetailsViewModel
 
 <h1>@Model.Name</h1>
 <br />
 <h2>@Model.Content</h2>
 <br />
+<div>
+
+</div>
 <a href="/forum/comments/index">Add a comment</a>
