--- a/GoodGuysCommunity/GoodGuysCommunity.Web/Areas/Forum/Views/Posts/Details.cshtml
+++ b/GoodGuysCommunity/GoodGuysCommunity.Web/Areas/Forum/Views/Posts/Details.cshtml
@@ -6,6 +6,8 @@
 <h2>@Model.Content</h2>
 <br />
 <div>
-
+    @foreach (var comment in Model.Comments) {
+        <div>@comment.Content</div>
+     }
 </div>
 <a href="/forum/comments/index">Add a comment</a>
