--- a/GoodGuysCommunity/GoodGuysCommunity.Web/Areas/Forum/Views/Comments/Index.cshtml
+++ b/GoodGuysCommunity/GoodGuysCommunity.Web/Areas/Forum/Views/Comments/Index.cshtml
@@ -1,1 +1,4 @@
-﻿
+﻿<form action="" method="post">
+    Add comment: <textarea name="Content"></textarea>
+    <input type="submit" name="submit" value="Submit" />
+</form>
