--- a/GoodGuysCommunity/GoodGuysCommunity.Web/wwwroot/css/style.css
+++ b/GoodGuysCommunity/GoodGuysCommunity.Web/wwwroot/css/style.css
@@ -88,3 +88,32 @@
     flex-direction: column;
     align-items: center;
 }
+
+.btns {
+    background-color: #9975F7;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    cursor: pointer;
+}
+input {
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+.butresults {
+    background-color: #edddaa;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border-radius: 4px;
+    border: none;
+    cursor: pointer;
+    width: 85%;
+    font-size: 30px;
+    text-align: left;
+}
+
