--- a/GoodGuysCommunity/GoodGuysCommunity.Web/Views/Manage/Index.cshtml
+++ b/GoodGuysCommunity/GoodGuysCommunity.Web/Views/Manage/Index.cshtml
@@ -16,6 +16,10 @@
                 <input asp-for="Username" class="form-control" disabled />
             </div>
             <div class="form-group">
+                <label asp-for="StreamKey"></label>
+                <input asp-for="StreamKey" class="form-control" disabled />
+            </div>
+            <div class="form-group">
                 <label asp-for="Email"></label>
                 @if (Model.IsEmailConfirmed)
                 {
