Tiny changes that help the site actually open

--- a/GoodGuysCommunity/GoodGuysCommunity.Web/Areas/Forum/Views/Posts/CreatePost.cshtml
+++ b/GoodGuysCommunity/GoodGuysCommunity.Web/Areas/Forum/Views/Posts/CreatePost.cshtml
@@ -1,6 +1,7 @@
 ﻿@using GoodGuysCommunity.Web.Areas.Forum.Models;
 @model PostListViewModel
 
+<div style="width: 100%; height: 100%;" id="forumpostback">
 <form action="" method="post">
     Name: <input type="text" name="Name" value="" />
           <br />
@@ -10,3 +11,4 @@
     <br />
 
 </form>
+</div>
