Determining which user posted comment

--- a/GoodGuysCommunity/GoodGuysCommunity.Web/Areas/Forum/Views/Posts/Details.cshtml
+++ b/GoodGuysCommunity/GoodGuysCommunity.Web/Areas/Forum/Views/Posts/Details.cshtml
@@ -10,4 +10,4 @@
         <div>@comment.Content</div>
      }
 </div>
-<a href="/forum/comments/index">Add a comment</a>
+<a href="/forum/comments/index/@Model.Id">Add a comment</a>
