--- a/GoodGuysCommunity/GoodGuysCommunity.Web/Areas/Forum/Views/Comments/Index.cshtml
+++ b/GoodGuysCommunity/GoodGuysCommunity.Web/Areas/Forum/Views/Comments/Index.cshtml
@@ -1,4 +1,7 @@
-﻿<form action="" method="post">
+﻿@using GoodGuysCommunity.Web.Areas.Forum.Models
+@model PostDetailsViewModel
+
+<form action="" method="post">
     Add comment: <textarea name="Content"></textarea>
-    <input type="submit" name="submit" value="Submit" />
+    <input type="submit" name="Submit" value="Submit" />
 </form>
