--- a/GoodGuysCommunity/GoodGuysCommunity.Web/Areas/Forum/Views/Posts/CreatePost.cshtml
+++ b/GoodGuysCommunity/GoodGuysCommunity.Web/Areas/Forum/Views/Posts/CreatePost.cshtml
@@ -6,7 +6,7 @@
           <br />
     Content: <textarea name="Content"></textarea>
              <br />
-    <input type="Submit" name="Submit" value="Submitss" />
+    <input type="Submit" name="Submit" value="Submit" />
     <br />
 
 </form>
