--- a/GoodGuysCommunity/GoodGuysCommunity.Web/Areas/Forum/Views/Posts/CreatePost.cshtml
+++ b/GoodGuysCommunity/GoodGuysCommunity.Web/Areas/Forum/Views/Posts/CreatePost.cshtml
@@ -1,12 +1,12 @@
 ﻿@using GoodGuysCommunity.Web.Areas.Forum.Models;
-@model PostListViewModel
+@model PostDetailsViewModel
 
 <div style="width: 100%; height: 100%;" id="forumpostback">
 <form action="" method="post">
     Name: <input type="text" name="Name" value="" />
-          <br />
+        <br />
     Content: <textarea name="Content"></textarea>
-             <br />
+        <br />
     <input type="Submit" name="Submit" value="Submit" />
     <br />
 
