--- a/GoodGuysCommunity/GoodGuysCommunity.Web/Areas/Forum/Views/Posts/Details.cshtml
+++ b/GoodGuysCommunity/GoodGuysCommunity.Web/Areas/Forum/Views/Posts/Details.cshtml
@@ -5,9 +5,10 @@
 <br />
 <h2>@Model.Content</h2>
 <br />
+
 <div>
     @foreach (var comment in Model.Comments) {
         <div>@comment.Content</div>
      }
 </div>
-<a href="/forum/comments/index/@Model.Id">Add a comment</a>
+<a href="/forum/comments/index/@Model">Add a comment</a>
