--- a/GoodGuysCommunity/GoodGuysCommunity.Web/wwwroot/css/style.css
+++ b/GoodGuysCommunity/GoodGuysCommunity.Web/wwwroot/css/style.css
@@ -112,13 +112,19 @@ input {
     margin: 8px 0;
     border-radius: 4px;
     border-style: solid;
-    border-width: 6px 0px 0px 0px;
-    border-color: #65AFD6;
+    border-width: 0px 0px 0px 6px;
+    border-color: #9975F7;
     cursor: pointer;
     width: 85%;
     font-size: 30px;
-    text-align: left;
+    text-align: left;#cube { background-color: yellow; }
 }
+    .butresults:hover {
+        color: #3b1a91;
+    }
+        .butresults:hover #resicon {
+            color: black;
+        }
 #forumpostback {
     background: linear-gradient( rgba(35, 115, 171, 0.21), rgba(35, 115, 171, 0.21) ), 
     url(/images/green-chameleon-176136-unsplash.jpg);
@@ -126,4 +132,10 @@ input {
 #library {
     background: linear-gradient( rgba(255,255,255,0.5), rgba(255,255,255,0.5) ), url(../images/tree_bark.png);
     background-size: auto;
+}
+#resourceslink {
+    text-decoration: none;
+}
+#resicon {
+    margin-right: 10px;
 }
