--- a/GoodGuysCommunity/GoodGuysCommunity.Web/Areas/Resources/Views/Browse/Index.cshtml
+++ b/GoodGuysCommunity/GoodGuysCommunity.Web/Areas/Resources/Views/Browse/Index.cshtml
@@ -7,14 +7,15 @@
     prevPath += "/";
 }
 <head>
+<link href="https://fonts.googleapis.com/css?family=PT+Mono" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="~/css/style.css"></head>
 <body id="library">
-<div><h3>You are in: @Model.Name</h3></div>
-<div>You are in: @Model.Path></div>
-<div style="text-align:center"><a href="/resources/browse?path=@prevPath"><button type="button" class="btn btn-danger">Back</button></a></div>
+<div ><h3 id="resheading">@Model.Name</h3></div>
+<div id="resub">@Model.Path></div>
+<div style="text-align:center"><a href="/resources/browse?path=@prevPath"><button type="button" class="btns" id="backbut">Back</button></a></div>
 <br/>
 <form action="/resources/manage/addfolder" method="post">
-    <input type="text" name="name"placeholder="Input name" />
+    <input type="text" name="name"placeholder="Name" />
     <input type="hidden" name="currentpath" value="@Model.Path" />
     <input class="btns" type="submit" value="Add folder" />
 </form>
@@ -26,7 +27,7 @@
     <input type="hidden" name="currentpath" value="@Model.Path" />
     <input class="btns" type="submit" value="Add resource" />
 </form>
-    <h3 style="text-align:center;">Resources:</h3>
+    <h3 id ="reslab">Resources:</h3>
 <br />
     <center>
     <div id="idfolder">
