--- a/GoodGuysCommunity/GoodGuysCommunity.Web/Areas/Forum/Views/Comments/Index.cshtml
+++ b/GoodGuysCommunity/GoodGuysCommunity.Web/Areas/Forum/Views/Comments/Index.cshtml
@@ -3,7 +3,7 @@
 
 <form action="" method="post">
     Add comment: <textarea name="Content"></textarea>
-    <input type="hidden" name="Username" value="@this.User.Identity.Name"/>
-    
+    <input type="hidden" name="Username" value="@this.User.Identity.Name" />
+    <input type="hidden" name="PostId" value="@Model.Id" />
     <input type="submit" name="Submit" value="Submit" />
 </form>
