--- a/GoodGuysCommunity/GoodGuysCommunity.Web/wwwroot/css/style.css
+++ b/GoodGuysCommunity/GoodGuysCommunity.Web/wwwroot/css/style.css
@@ -119,7 +119,6 @@ input {
     font-size: 30px;
     font-family: 'PT Mono', monospace;
     text-align: left;
-    #cube { background-color: yellow; }
 }
     .butresults:hover {
         color: #3b1a91;
@@ -128,8 +127,9 @@ input {
             color: black;
         }
 #forumpostback {
-    background: linear-gradient( rgba(35, 115, 171, 0.21), rgba(35, 115, 171, 0.21) ), 
-    url(/images/green-chameleon-176136-unsplash.jpg);
+    background: linear-gradient( rgba(35, 115, 171, 0.21), rgba(35, 115, 171, 0.21) ), url(/images/green-chameleon-176136-unsplash.jpg);
+    background-size: cover;
+    
 }
 #library {
     background: rgba(197, 175, 255, 0.2);
@@ -138,7 +138,7 @@ input {
 #resourceslink {
     text-decoration: none;
 }
-#resicon {
+.resicon {
     margin-right: 10px;
 }
 #resheading, #resub, #reslab {
@@ -156,4 +156,30 @@ input {
     background-color: #d63939;
     font-family: 'PT Mono', monospace;
     font-weight: bold;
+}
+.butforum {
+    background-color: #9975F7;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border-radius: 10px;
+    border: none;
+    cursor: pointer;
+}
+.ar {
+    display:inline;
+}
+.fileresults {
+    background-color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border-radius: 4px;
+    border-style: solid;
+    border-width: 0px 0px 0px 6px;
+    border-color: #75a0f7;
+    cursor: pointer;
+    width: 85%;
+    font-size: 24px;
+    font-family: 'PT Mono', monospace;
+    text-align: left;
 }
