--- a/GoodGuysCommunity/GoodGuysCommunity.Web/Areas/Forum/Views/Posts/CreatePost.cshtml
+++ b/GoodGuysCommunity/GoodGuysCommunity.Web/Areas/Forum/Views/Posts/CreatePost.cshtml
@@ -1,5 +1,4 @@
-﻿@using GoodGuysCommunity.Web.Areas.Forum.Models;
-@model PostListViewModel
+﻿@model PostDetailsViewModel
 
 <form action="" method="post">
     Name: <input type="text" name="Name" value="" />
