--- a/GoodGuysCommunity/GoodGuysCommunity.Web/Areas/Forum/Views/Posts/Details.cshtml
+++ b/GoodGuysCommunity/GoodGuysCommunity.Web/Areas/Forum/Views/Posts/Details.cshtml
@@ -1,5 +1,4 @@
-﻿@using GoodGuysCommunity.Web.Areas.Forum.Models;
-@model PostDetailsViewModel
+﻿@model PostDetailsViewModel
 
 <h1>@Model.Name</h1>
 <br />
