--- a/GoodGuysCommunity/GoodGuysCommunity.Web/Areas/Forum/Views/Posts/Index.cshtml
+++ b/GoodGuysCommunity/GoodGuysCommunity.Web/Areas/Forum/Views/Posts/Index.cshtml
@@ -1,5 +1,4 @@
-﻿@using GoodGuysCommunity.Web.Areas.Forum.Models;
-@model IEnumerable<PostDetailsViewModel>
+﻿@model IEnumerable<PostDetailsViewModel>
 
 <a href="/forum/posts/createpost">Make a post!!!</a>
 
