--- a/GoodGuysCommunity/GoodGuysCommunity.Web/Areas/Forum/Views/_ViewImports.cshtml
+++ b/GoodGuysCommunity/GoodGuysCommunity.Web/Areas/Forum/Views/_ViewImports.cshtml
@@ -3,4 +3,5 @@
 @using GoodGuysCommunity.Web.Models
 @using GoodGuysCommunity.Web.Models.AccountViewModels
 @using GoodGuysCommunity.Web.Models.ManageViewModels
+@using GoodGuysCommunity.Web.Areas.Forum.Models;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
