Fixed forum comments and started livechat

--- a/GoodGuysCommunity/GoodGuysCommunity.Web/Areas/Forum/Views/Posts/CreatePost.cshtml
+++ b/GoodGuysCommunity/GoodGuysCommunity.Web/Areas/Forum/Views/Posts/CreatePost.cshtml
@@ -1,4 +1,4 @@
-﻿@model PostListViewModel
+﻿@model PostDetailsViewModel
 <div style="width: 100%; height: 100%;" id="forumpostback">
 <form action="" method="post">
     Name: <input type="text" name="Name" value="" />
