--- a/GoodGuysCommunity/GoodGuysCommunity.Web/Areas/Resources/Views/Browse/Index.cshtml
+++ b/GoodGuysCommunity/GoodGuysCommunity.Web/Areas/Resources/Views/Browse/Index.cshtml
@@ -8,6 +8,7 @@
 }
 <head>
 <link href="https://fonts.googleapis.com/css?family=PT+Mono" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="~/css/style.css"></head>
 <body id="library">
 <div ><h3 id="resheading">@Model.Name</h3></div>
@@ -41,7 +42,7 @@
         <ul style="list-style-type: none;">
             @foreach (var resource in Model.Resources)
             {
-                <li><button class="fileresults" style="margin-left:75px;"><i class="fas fa-file resicon"></i>"Resource - @resource.Name</button></li>
+                <li><button class="fileresults"><i class="fas fa-file resicon"></i>"Resource - @resource.Name</button></li>
             }
         </ul>
     </div></center></body>
