--- a/GoodGuysCommunity/GoodGuysCommunity.Web/Areas/Forum/Views/Posts/Index.cshtml
+++ b/GoodGuysCommunity/GoodGuysCommunity.Web/Areas/Forum/Views/Posts/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<PostDetailsViewModel>
+﻿@using GoodGuysCommunity.Web.Areas.Forum.Models
+@model IEnumerable<PostDetailsViewModel>
 
 <a href="/forum/posts/createpost"><button type="button" class="btns" style="background-color: lightgreen;">Post a thread</button></a>
 
