--- a/GoodGuysCommunity/GoodGuysCommunity.Web/Views/Account/Login.cshtml
+++ b/GoodGuysCommunity/GoodGuysCommunity.Web/Views/Account/Login.cshtml
@@ -9,10 +9,9 @@
 
 <h2>@ViewData["Title"]</h2>
 <div class="log-in-page">
-    <div class="col-md-4">
+    <div>
         <section>
-            <form asp-route-returnurl="@ViewData["ReturnUrl"]" method="post">
-                <h4>Use a local account to log in.</h4>
+            <form asp-route-returnurl="@ViewData["ReturnUrl"]" method="post" class="daform">
                 <hr />
                 <div asp-validation-summary="All" class="text-danger"></div>
                 <div class="form-group">
@@ -34,14 +33,14 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <button type="submit" class="btn btn-default">Log in</button>
+                    <button type="submit" class="btns final">Log in</button>
                 </div>
                 <div class="form-group">
                     <p>
-                        <a asp-action="ForgotPassword">Forgot your password?</a>
+                        <a asp-action="ForgotPassword"><button type="submit" class="btns butsec">Forgot your password?</button></a>
                     </p>
                     <p>
-                        <a asp-action="Register" asp-route-returnurl="@ViewData["ReturnUrl"]">Register as a new user?</a>
+                        <a asp-action="Register" asp-route-returnurl="@ViewData["ReturnUrl"]"><button type="submit" class="btns butsec">Register as a new user?</button></a>
                     </p>
                 </div>
             </form>
