--- a/GoodGuysCommunity/GoodGuysCommunity.Web/Views/Account/Register.cshtml
+++ b/GoodGuysCommunity/GoodGuysCommunity.Web/Views/Account/Register.cshtml
@@ -5,9 +5,9 @@
 
 <h2>@ViewData["Title"]</h2>
 
-<div class="row">
-    <div class="col-md-4">
-        <form asp-route-returnUrl="@ViewData["ReturnUrl"]" method="post">
+<div>
+    <div class="log-in-page">
+        <form asp-route-returnUrl="@ViewData["ReturnUrl"]" method="post" class="daform">
             <h4>Create a new account.</h4>
             <hr />
             <div asp-validation-summary="All" class="text-danger"></div>
@@ -31,7 +31,7 @@
                 <input asp-for="ConfirmPassword" class="form-control" />
                 <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
             </div>
-            <button type="submit" class="btn btn-default">Register</button>
+            <button type="submit" class="btns final">Register</button>
         </form>
     </div>
 </div>
