--- a/GoodGuysCommunity/GoodGuysCommunity.Web/Views/Manage/ChangePassword.cshtml
+++ b/GoodGuysCommunity/GoodGuysCommunity.Web/Views/Manage/ChangePassword.cshtml
@@ -5,11 +5,11 @@
     ViewData.AddActivePage(ManageNavPages.ChangePassword);
 }
 
-<h4>@ViewData["Title"]</h4>
+
 @Html.Partial("_StatusMessage", Model.StatusMessage)
 <div class="row">
     <div class="col-md-6">
-        <form method="post">
+        <form method="post" class="daform">
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="OldPassword"></label>
@@ -26,7 +26,7 @@
                 <input asp-for="ConfirmPassword" class="form-control" />
                 <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
             </div>
-            <button type="submit" class="btn btn-default">Update password</button>
+            <button type="submit" class="btns">Update password</button>
         </form>
     </div>
 </div>
