--- a/GoodGuysCommunity/GoodGuysCommunity.Web/wwwroot/css/style.css
+++ b/GoodGuysCommunity/GoodGuysCommunity.Web/wwwroot/css/style.css
@@ -206,3 +206,17 @@ input {
 #forumlogo {
     text-align: center;
 }
+
+.daform {
+    width: 500px;
+    font-family: 'PT Mono', monospace;
+    font-size: 19px;
+}
+.final {
+    background-color: #6468D6;
+    font-size: 20px;
+}
+.butsec {
+    font-size: 16px;
+    font-family: 'PT Mono', monospace;
+}
