--- a/GoodGuysCommunity/GoodGuysCommunity.Web/wwwroot/css/style.css
+++ b/GoodGuysCommunity/GoodGuysCommunity.Web/wwwroot/css/style.css
@@ -220,3 +220,22 @@ input {
     font-size: 16px;
     font-family: 'PT Mono', monospace;
 }
+#msg {
+    display: inline;
+
+}
+#discussion {
+    font-family: 'Open Sans', sans-serif;
+    font-size: 19px;
+    text-align: left;
+    border-style: solid;
+    border-width: 10px;
+    float: right;
+    width: 700px;
+    height: 800px;
+    overflow: hidden;
+    padding: 10px;
+}
+    #discussion:hover {
+        overflow-y: scroll;
+    }
