--- a/GoodGuysCommunity/GoodGuysCommunity.Web/Areas/Forum/Views/Posts/Details.cshtml
+++ b/GoodGuysCommunity/GoodGuysCommunity.Web/Areas/Forum/Views/Posts/Details.cshtml
@@ -8,7 +8,7 @@
 <div>
     @foreach (var comment in Model.Comments)
     {
-        <div>@comment.Content</div>
+        <div>@comment.Content ~ @comment.Author.UserName , @comment.CommentDate</div>
     }
 </div>
 <form action="/forum/comments/add" method="post">
