Added a .css file for the livestream. Oops :/

--- a/GoodGuysCommunity/GoodGuysCommunity.Web/Areas/Broadcast/Views/Live/Watch.cshtml
+++ b/GoodGuysCommunity/GoodGuysCommunity.Web/Areas/Broadcast/Views/Live/Watch.cshtml
@@ -15,6 +15,7 @@ centered"
 <input type="hidden" id="userneim" value="@this.User.Identity.Name"/>
 
 @section Scripts{ 
+    <link href="http://vjs.zencdn.net/6.6.3/video-js.css" rel="stylesheet">
     <script src="http://vjs.zencdn.net/6.6.3/video.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/videojs-flash@2/dist/videojs-flash.min.js"></script>
     <script type="text/javascript" src="/js/signalr.js"></script>
