Fix merge issues

--- a/GoodGuysCommunity/GoodGuysCommunity.Web/Areas/Forum/Views/Posts/CreatePost.cshtml
+++ b/GoodGuysCommunity/GoodGuysCommunity.Web/Areas/Forum/Views/Posts/CreatePost.cshtml
@@ -1,11 +1,11 @@
 ﻿@model PostDetailsViewModel
 <div style="width: 100%; height: 100%;" id="forumpostback">
 <form action="" method="post">
-    Name: <input type="text" name="Name" value="" />
+    <input type="text" name="Name" value="" placeholder="Name" />
         <br />
-    Content: <textarea name="Content"></textarea>
+    <textarea name="Content" placeholder="Content"></textarea>
         <br />
-    <input type="Submit" name="Submit" value="Submit" />
+    <input type="Submit" name="Submit" value="Submit"  />
     <br />
 
 </form>
