--- a/GoodGuysCommunity/GoodGuysCommunity.Web/Areas/Broadcast/Views/Live/Watch.cshtml
+++ b/GoodGuysCommunity/GoodGuysCommunity.Web/Areas/Broadcast/Views/Live/Watch.cshtml
@@ -1,18 +1,19 @@
-﻿<video id="livestream" class="video-js vjs-default-skin vjs-big-play-
-centered"
+﻿<video id="livestream" class="video-js vjs-default-skin vjs-big-play-centered"
        controls autoplay preload="auto" width="600" height="300"
        data-setup='{"techorder" : ["flash"] }'>
     <source src="rtmp://94.156.157.104:1935/live/test" type="rtmp/mp4">
 </video>
 
-<div class="container">
-    <input type="text" id="message" />
-    <input type="button" id="sendmessage" value="Send" />
+<div class="container" id="chatbox">
+    
     <!--<input type="hidden" id="displayname" />-->
     <ul id="discussion"></ul>
+    <input type="text" id="message" />
+    <input type="button" id="sendmessage" value="Send" />
 </div>
 
 <input type="hidden" id="userneim" value="@this.User.Identity.Name"/>
+
 
 @section Scripts{ 
     <link href="http://vjs.zencdn.net/6.6.3/video-js.css" rel="stylesheet">
