--- a/GoodGuysCommunity/GoodGuysCommunity.Web/wwwroot/css/style.css
+++ b/GoodGuysCommunity/GoodGuysCommunity.Web/wwwroot/css/style.css
@@ -166,13 +166,15 @@ input {
     border-width: 0px 0px 0px 6px;
     border-color: #67efaf;
     cursor: pointer;
-    width: 75%;
+    width: 50%;
     font-size: 24px;
     font-family: Roboto;
     text-align: left;
 }
 .ar {
-    display:inline;
+    display: flex;
+    flex-direction: column;
+    list-style: none;
 }
 .fileresults {
     background-color: white;
@@ -224,18 +226,24 @@ input {
     display: inline;
 
 }
+
 #discussion {
     font-family: 'Open Sans', sans-serif;
     font-size: 19px;
     text-align: left;
     border-style: solid;
     border-width: 10px;
-    float: right;
+
     width: 700px;
     height: 800px;
     overflow: hidden;
     padding: 10px;
+    position: relative;
 }
     #discussion:hover {
         overflow-y: scroll;
     }
+
+#chatbox {
+    position: relative;
+}
