--- a/GoodGuysCommunity/GoodGuysCommunity.Web/wwwroot/css/style.css
+++ b/GoodGuysCommunity/GoodGuysCommunity.Web/wwwroot/css/style.css
@@ -231,14 +231,12 @@ input {
     font-family: 'Open Sans', sans-serif;
     font-size: 19px;
     text-align: left;
-    border-style: solid;
-    border-width: 10px;
 
-    width: 700px;
-    height: 800px;
     overflow: hidden;
     padding: 10px;
     position: relative;
+
+    flex: 1;
 }
     #discussion:hover {
         overflow-y: scroll;
@@ -246,4 +244,23 @@ input {
 
 #chatbox {
     position: relative;
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    border-left: solid 1px black;
+    padding: 0 5px;
+}
+
+.send-line {
+    display: flex;
+}
+
+.send-line #message {
+    flex: 1;
+    margin-right: 5px;
+}
+
+.video-chat-wrapper {
+    display: flex;
+    height: 80vh;
 }
