--- a/GoodGuysCommunity/GoodGuysCommunity.Web/Areas/Resources/Views/Browse/Index.cshtml
+++ b/GoodGuysCommunity/GoodGuysCommunity.Web/Areas/Resources/Views/Browse/Index.cshtml
@@ -24,9 +24,7 @@
 
     <form action="/resources/manage/addresource" method="post" enctype="multipart/form-data">
         <center><input type="file" name="file" placeholder="Choose File" /></center>
-
-        
-
+        <input type="hidden" name="author" value="@User.Identity.Name" />
         <input type="hidden" name="currentpath" value="@Model.Path" />
         <input class="btns" type="submit" value="Add resource" />
     </form>
@@ -44,7 +42,7 @@
             <ul style="list-style-type: none;">
                 @foreach (var resource in Model.Resources)
                 {
-                    <li><a href="/resources/manage/downloadresource?currentpath=/resources/@resource.FilePath" class="fileresults" style="margin-left:75px;"><i class="fas fa-file resicon"></i>"Resource - @resource.Name</a></li>
+                    <li><a href="/resources/manage/downloadresource?currentpath=/resources/@resource.FilePath" class="fileresults" style="margin-left:75px;"><i class="fas fa-file resicon"></i>"Resource - @resource.Name by @resource.AuthorName</a> <a href="/resources/manage/removefile?resourceid=@resource.Id">Delete</a></li>
                 }
             </ul>
         </div>
