--- a/GoodGuysCommunity/GoodGuysCommunity.Web/Areas/Broadcast/Views/Live/Watch.cshtml
+++ b/GoodGuysCommunity/GoodGuysCommunity.Web/Areas/Broadcast/Views/Live/Watch.cshtml
@@ -1,7 +1,7 @@
 ﻿<video id="livestream" class="video-js vjs-default-skin vjs-big-play-centered"
        controls autoplay preload="auto" width="600" height="300"
        data-setup='{"techorder" : ["flash"] }'>
-    <source src="rtmp://94.156.157.104:1935/live/test" type="rtmp/mp4">
+    <source src="rtmp://94.156.157.104:1935/live/@Model" type="rtmp/mp4">
 </video>
 
 <div class="container" id="chatbox">
