--- a/GoodGuysCommunity/GoodGuysCommunity.Web/Views/Home/Index.cshtml
+++ b/GoodGuysCommunity/GoodGuysCommunity.Web/Views/Home/Index.cshtml
@@ -15,12 +15,12 @@
         </nav> 
     </div>-->
     <div id="sidebar">
-        <img src="~/images/buttonbeta.png" id="streamimage">
-        <div id="forumNewest">
-            <div class="forumcontent"><p class="threadtitle">C# блабла</p></div>
-            <div class="forumcontent"><p class="threadtitle">HTML и CSS не правят контакт</p></div>
-            <div class="forumcontent"><p class="threadtitle">Блабла</p></div>
-            <div class="forumcontent"><p class="threadtitle">fedw</p></div>
-        </div>
-    </div>
+        <a asp-area="broadcast" asp-controller="live" asp-action="watch"><img src="~/images/buttonbeta.png" id="streamimage"></a>
+            <div id="forumNewest">
+                <div class="forumcontent"><p class="threadtitle">C# блабла</p></div>
+                <div class="forumcontent"><p class="threadtitle">HTML и CSS не правят контакт</p></div>
+                <div class="forumcontent"><p class="threadtitle">Блабла</p></div>
+                <div class="forumcontent"><p class="threadtitle">fedw</p></div>
+            </div>
+</div>
 
