--- a/GoodGuysCommunity/GoodGuysCommunity.Web/Areas/Broadcast/Views/Live/Watch.cshtml
+++ b/GoodGuysCommunity/GoodGuysCommunity.Web/Areas/Broadcast/Views/Live/Watch.cshtml
@@ -11,7 +11,7 @@
         <ul id="discussion"></ul>
         <div class="send-line">
             <input type="text" id="message"  onkeypress="if (event.keyCode == 13) { document.getElementById('sendmessage').click(); return false; }"/>
-            <input type="button" id="sendmessage" value="Send" />
+            <button type="button" class="btns" id="sendmessage" value="Send">Send</button>
         </div>
     </div>
 
