--- a/GoodGuysCommunity/GoodGuysCommunity.Web/Areas/Forum/Views/Posts/Details.cshtml
+++ b/GoodGuysCommunity/GoodGuysCommunity.Web/Areas/Forum/Views/Posts/Details.cshtml
@@ -5,17 +5,20 @@
  <p id="forumcontent">@Model.Content</p>
 <br />
 
-<div>
-    @foreach (var comment in Model.Comments)
-    {
-        <div>@comment.Content ~ @comment.Author.UserName , @comment.CommentDate</div>
-    }
-</div>
+
 <form action="/forum/comments/add" method="post">
     <input type="hidden" name="postId" value="@Model.Id" />
     <input type="hidden" name="username" value="@Model.Name" />
-    <textarea name="Content"></textarea>
-    <input type="submit" name="submit" value="Submit" />
+    <textarea name="Content" class="forumsubmit" id="fsub"></textarea>
+    <br />
+    <button type="submit" name="submit" value="Submit" class="btns" id="sub">Submit</button>
 </form>
+    <h3>Comments:</h3>
+<div>
+    @foreach (var comment in Model.Comments)
+    {
+        <div id="comments"><i class="fas fa-rocket resicon"></i>@comment.Content</div>
+    }
+</div>
 
 <!--<center><a href="/forum/posts/comments/details/@Model"><button class="foreachs">Comment!</button></a></center>-->
