--- a/GoodGuysCommunity/GoodGuysCommunity.Web/wwwroot/css/style.css
+++ b/GoodGuysCommunity/GoodGuysCommunity.Web/wwwroot/css/style.css
@@ -128,7 +128,7 @@ input {
 #forumpostback {
     background: linear-gradient( rgba(35, 115, 171, 0.21), rgba(35, 115, 171, 0.21) ), url(/images/green-chameleon-176136-unsplash.jpg);
     background-size: cover;
-    
+    text-align: center;
 }
 #library {
     background: rgba(197, 175, 255, 0.2);
@@ -159,11 +159,11 @@ input {
 .butforum {
     background-color: white;
     padding: 14px 20px;
-    margin: 8px 0;
+    margin: 8px 0px 10px 150px;
     border-radius: 4px;
     border-style: solid;
     border-width: 0px 0px 0px 6px;
-    border-color: #67efaf;
+    border-color: black;
     cursor: pointer;
     width: 50%;
     font-size: 24px;
@@ -197,7 +197,7 @@ input {
     font-family: 'PT Mono', monospace;
 }
 #threadpostbut {
-    background-color: #6fc698;
+    background-color: black;
     font-size: 25px;
     font-weight: bold;
     font-family: Roboto;
@@ -206,6 +206,9 @@ input {
 }
 #forumlogo {
     text-align: center;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 40px;
+    color: white;
 }
 
 .daform {
@@ -220,6 +223,7 @@ input {
 .butsec {
     font-size: 16px;
     font-family: 'PT Mono', monospace;
+    background-color: #4581a0;
 }
 #msg {
     display: inline;
@@ -267,4 +271,45 @@ input {
 .video-js {
     width: 55% !important;
     height: auto !important;
+}
+.forumform {
+    width: 50vw;
+    text-align: left;
+}
+#forumf {
+    display: inline-block;
+    text-align: center;
+    margin-top: 60px;
+}
+.forumsubmit {
+    width: 50vw;
+    height: 60vh;
+    resize: none;
+}
+#fsub {
+    height: 30vh;
+}
+#comments {
+    font-family: 'Open Sans', sans-serif;
+    font-size: 22px;
+    text-align:left;
+    padding: 10px;
+    margin-left:25vw;
+}
+#sub {
+    font-size: 22px;
+    background-color: black;
+}
+#idk {
+    background-image:url(../images/escheresque_ste.png);
+    background-repeat: repeat;
+}
+#livestream {
+    border-style: solid;
+    border-color: #6468D6;
+    border-width: 0px 0px 10px 0px;
+}
+#sendmessage {
+    background-color: black;
+    font-size: 16px;
 }
