--- a/GoodGuysCommunity/GoodGuysCommunity.Web/Areas/Forum/Views/Posts/CreatePost.cshtml
+++ b/GoodGuysCommunity/GoodGuysCommunity.Web/Areas/Forum/Views/Posts/CreatePost.cshtml
@@ -5,7 +5,7 @@
         <br />
     <textarea name="Content" placeholder="Content" class="forumsubmit"></textarea>
         <br />
-    <input type="Submit" name="Submit" value="Submit" />
+   <button type="Submit" name="Submit" value="Submit" class="btns" id="subbut">Submit</button>
     <br />
 
 </form>
