--- a/GoodGuysCommunity/GoodGuysCommunity.Web/Views/Account/Login.cshtml
+++ b/GoodGuysCommunity/GoodGuysCommunity.Web/Views/Account/Login.cshtml
@@ -37,10 +37,8 @@
                 </div>
                 <div class="form-group">
                     <p>
+                        <a asp-action="Register" asp-route-returnurl="@ViewData["ReturnUrl"]"><button type="submit" class="btns butsec">Register</button></a>
                         <a asp-action="ForgotPassword"><button type="submit" class="btns butsec">Forgot your password?</button></a>
-                    </p>
-                    <p>
-                        <a asp-action="Register" asp-route-returnurl="@ViewData["ReturnUrl"]"><button type="submit" class="btns butsec">Register as a new user?</button></a>
                     </p>
                 </div>
             </form>
@@ -68,7 +66,7 @@
                             <p>
                                 @foreach (var provider in loginProviders)
                                 {
-                                    <button type="submit" class="btn btn-default" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.Name</button>
+                                    <button type="submit" class="btns" id ="facebutton" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account"><i class="fab fa-facebook-square resicon"></i>@provider.Name</button>
                                 }
                             </p>
                         </div>
