Adding forum posts in front page

--- a/GoodGuysCommunity/GoodGuysCommunity.Web/Views/Home/Index.cshtml
+++ b/GoodGuysCommunity/GoodGuysCommunity.Web/Views/Home/Index.cshtml
@@ -2,18 +2,6 @@
     ViewData["Title"] = "Home Page";
 }
 
-
-   
-    
-    <!--<div id="navbarback">
-         <nav id="navbardiv">
-            <span><a href="http://google.com"><p class="navb">Начало</p></a></span>
-            <span><a href="http://google.com"><p class="navb">Ресурси</p></a></span>
-            <span><a href="http://google.com"><p class="navb">Форум</p></a></span>
-            <span><a href="http://google.com"><p class="navb">Регистрация</p></a></span>
-            <span><a href="http://google.com"><p class="navb">Login</p></a></span>
-        </nav> 
-    </div>-->
     <div id="sidebar">
         <a asp-area="broadcast" asp-controller="live" asp-action="watch"><img src="~/images/buttonbeta.png" id="streamimage"></a>
             <div id="forumNewest">
@@ -21,6 +9,10 @@
                 <div class="forumcontent"><p class="threadtitle">HTML и CSS не правят контакт</p></div>
                 <div class="forumcontent"><p class="threadtitle">Блабла</p></div>
                 <div class="forumcontent"><p class="threadtitle">fedw</p></div>
+            </div>
+
+            <div>
+                
             </div>
 </div>
 
